package Util;

public enum StreetConditions{
    Dry,
    Wet,
    Soaking,
    Snowy,
    Icy
}
