@startuml

title __UTIL's Class Diagram__\n

  package  {
    package Util {
      class MyVector2D {
          - xPart : double
          - yPart : double
          {static} + parse()
          + x()
          + y()
          + MyVector2D()
          + length()
          + multiply()
          + add()
          + normalize()
          + toString()
      }
    }
  }
  

  package  {
    package Util {
      enum StreetConditions {
        Dry
        Wet
        Soaking
        Snowy
        Icy
      }
    }
  }
  

  EnumDesc -up-|> DynamicConstantDesc
  AnonymousDynamicConstantDesc -up-|> DynamicConstantDesc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
